# TheBuilders

./: .gitignore  CHANGELOG.md  PR_SUMMARY.md  README  README.md  YOLO_V8_Script.ipynb  docker-compose.yml  pyproject.toml  simple_model_test.py  test_api_simple.py  test_classification.py  test_integration_full.py  test_models_basic.py  yolo_v8_script.py
LLMprompt code/chatterd/: handlers.py  main.py  pyproject.toml
LLMtools code/: chatterd.crt  chatterd.key  llmtools-integration.md  reactive.pem
LLMtools code/chatterd/: handlers.py  main.py  pyproject.toml  toolbox.py
YoloV8/: YOLO_V8_Script.ipynb
YoloV8/models/: yolov8n_color_custom_classification_best.pt
ios/The Builders/: AddClothingItemView.swift  AddItemWithTextView.swift  AvatarAPI.swift  AvatarManager.swift  CategoryTabView.swift  ChatServiceAPI.swift  ClothingItemCard.swift  ClothingItemDetailView.swift  ContentView.swift  FeedbackView.swift  HomeView.swift  ImagePicker.swift  ImageUploadService.swift  LocationService.swift  MockAPIStore.swift  ModelsClothingItem.swift  ModelsOutfit.swift  OutfitConfirm1.swift  OutfitGeneratedView.swift  OutfitGenerationComplete.swift  OutfitGenerationHelper.swift  OutfitGeneratorView.swift  OutfitTryOnView1.swift  OutfitTryOnView2.swift  S3UploadService.swift  TabSelectionManager.swift  TheBuildersApp.swift  UploadAvatarView.swift  WardrobeManager.swift  WardrobeView.swift  WeatherAPI.swift  WeatherViewModel.swift
ios/The Builders.xcodeproj/: project.pbxproj
ios/The BuildersTests/: The_BuildersTests.swift
ios/The BuildersUITests/: The_BuildersUITests.swift  The_BuildersUITestsLaunchTests.swift
ios/TheBuildersApp/: ClothingItem.swift  ClothingItemDetailView.swift  ContentView.swift  HomeView.swift  ModelsClothingItem.swift  OutfitGeneratorView.swift
misc/: auth_and_launch_db_proxy.sh
src/api/: __init__.py  schema.py  server.py  validate.py
src/db/: driver.py  garment_store.py  garmentstore.py  schema.py  user_store.py
src/models/: enums.py
src/services/: avatar_service.py  chat_service.py  classification_service.py  garment_service.py  outfit_generator_service.py  user_service.py
tests/api/: integration.py  unit.py  validate.py
tests/db/: integration.py  unit.py  util.py
(+22 files in other folders)
