[project]
name = "thebuilders"
version = "0.1.0"
description = ""
authors = [
    {name = "Jared Diaz",email = "jtdiaz@umich.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "testcontainers (>=4.13.2,<5.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]
packages = [{ include = "*", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false